--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -24,6 +24,7 @@ body {
   flex-direction: column;
   align-self: center;
   width: 100vw;
+  width: 100%;
 }
 
 .container {
